--- a/app/nbproject/project.properties
+++ b/app/nbproject/project.properties
@@ -52,8 +52,6 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.beans-binding.classpath}:\
     ${file.reference.barcode.jar}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-digester-1.8.jar}:\
@@ -89,6 +87,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -97,6 +96,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=PointOfSale
 main.class=view.Form_Login_old
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
